# nucleo

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  foo.c  generate_case_fold_table.sh  tarpulin.toml  typos.toml
.github/: dependabot.yaml
.github/workflows/: ci.yml
bench/: Cargo.toml
bench/src/: main.rs
benches/: Cargo.toml  main.rs
benches/main/: boxcar.rs
benches/src/: main.rs
matcher/: Cargo.toml  generate_case_fold_table.sh
matcher/src/: chars.rs  config.rs  exact.rs  fuzzy_optimal.rs  lib.rs  matrix.rs  pattern.rs  prefilter.rs  score.rs  tests.rs  utf32_str.rs
matcher/src/chars/: case_fold.rs  normalize.rs
matcher/src/pattern/: tests.rs
src/: boxcar.rs  chars.rs  config.rs  debug.rs  exact.rs  fuzzy_greedy.rs  fuzzy_optimal.rs  items.rs  lib.rs  matrix.rs  normalize.rs  par_sort.rs  pattern.rs  prefilter.rs  query.rs  score.rs  tests.rs  utf32_str.rs  utf32_string.rs  worker.rs
src/chars/: case_fold.rs  normalize.rs
src/pattern/: tests.rs
worker/: Cargo.toml
worker/src/: items.rs  lib.rs  query.rs  results.rs  utf32_string.rs  worker.rs
