[package]
name = "nucleo-matcher"
authors = ["Pascal Kuthe <pascal.kuthe@semimod.de>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memchr = "2.5.0"
cov-mark = { version = "1.1.0", default-features = false }

[dev-dependencies]
cov-mark = { version = "1.1.0", default-features = true }
criterion = "0.5.1"
fuzzy-matcher = "0.3.7"

