[package]
name = "nucleo-matcher"
description = "plug and play high performance fuzzy matcher"
authors = ["Pascal Kuthe <pascal.kuthe@semimod.de>"]
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/helix-editor/nucleo"
readme = "../README.md"

[dependencies]
memchr = "2.5.0"
cov-mark = { version = "1.1.0", default-features = false }
unicode-segmentation = "1.10"

[dev-dependencies]
cov-mark = { version = "1.1.0", default-features = true }
